[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Fonts/BalsamiqSans-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/Project/UI/BoonSelect.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 34
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 14
font_data = ExtResource( 1 )

[node name="BoonSelect" type="Node2D"]
script = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
modulate = Color( 0.976471, 0.847059, 0.847059, 1 )
margin_left = 587.0
margin_top = 19.0
margin_right = 735.0
margin_bottom = 87.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Price" type="Label" parent="."]
margin_left = 548.0
margin_top = 83.0
margin_right = 736.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 2 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tooltip" type="Node2D" parent="."]
visible = false
position = Vector2( 665, 255 )
z_index = 5

[node name="Background" type="ColorRect" parent="Tooltip"]
margin_left = -120.0
margin_top = -160.0
margin_right = 120.0
margin_bottom = -25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inside" type="ColorRect" parent="Tooltip"]
margin_left = -117.0
margin_top = -157.0
margin_right = 117.0
margin_bottom = -28.0
color = Color( 0.458824, 0.25098, 0.25098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Tooltip"]
margin_left = -112.0
margin_top = -157.0
margin_right = 113.0
margin_bottom = -22.0
custom_fonts/font = SubResource( 3 )
text = "aaaaaaaaaaaaaa"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
